# SphereTS

./: .gitignore  .hgignore  .spyderproject  MANIFEST.in  README.md  README.txt  about.html  pyproject.toml  setup.py  sphereTS.py  sphereTSGUI.py  sphereTSGUIhelp.html  sphere_ts.py  sphere_ts_gui.py
.github/workflows/: publish-to-pypi.yml
docs/: about.html
src/sphereTS/: sphere_ts.py  sphere_ts_gui.py
tests/: test_imports.py
