[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sphereTS"]

[tool.hatch.build.targets.sdist.force-include]
"docs" = "docs"

[tool.hatch.build.targets.wheel.force-include]
"docs" = "sphereTS/docs"

[project]
name = "sphereTS"
keywords = ["acoustic", "sphere", "calibration", "fisheries"]
license = {file = "COPYING.txt"}
authors = [
  { name="Gavin Macaulay", email="gavin@macaulay.co.nz" },
]
description = "Calculates the acoustic target strength of an elastic sphere immersed in a fluid"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "traits",
  "traitsui",
  "numpy",
  "scipy",
  "gsw",
  "matplotlib",
  "PyQt5"
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Oceanography',
]

dynamic = [ 'version']

[project.scripts]
spherets = "sphereTS.sphere_ts_gui:main"

[tool.hatch.version]
source = 'vcs'

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"  # otherwise the non-tagged version is not accepted by testpypi

[project.urls]
Homepage = "https://github.com/gavinmacaulay/SphereTS"
Issues = "https://github.com/gavinmacaulay/SphereTS/issues"